--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,23 @@ div.experience div.description {
 	display: inline;
 }
 
+section#contact {
+	max-width: 480px;
+}
+
+form.contact input,textarea {
+	margin-bottom: 10px;
+	padding: 7px;
+	border-radius: 5px;
+	border: 3px solid #00b33c;
+	width: 100%;
+}
+
+form.contact input[type=submit] {
+	color: white;
+	background-color:#00b33c;
+}
+
 .page-break	{
 	display: none;
 }
