--- a/css/styles.css
+++ b/css/styles.css
@@ -103,13 +103,15 @@ form.contact input,textarea {
 	margin-bottom: 10px;
 	padding: 7px;
 	border-radius: 5px;
-	border: 3px solid #00b33c;
+	border: 3px solid #333;
 	width: 100%;
 }
 
 form.contact input[type=submit] {
 	color: white;
 	background-color:#00b33c;
+	border: 3px solid #00b33c;
+	font-weight: bold;
 }
 
 .page-break	{
