--- a/css/vita.css
+++ b/css/vita.css
@@ -34,17 +34,14 @@ html * {
 	color: #333;
 }
 
-h1 {
-	margin-top: 40px;
-}
-
 ul {
 	list-style-type: none;
 }
 
 h1 {
 	font-family: 'Libre Baskerville', serif;
-	font-size: 30px;
+	font-size: 1.9em;
+	margin-top: 40px;
 }
 
 header {
@@ -53,7 +50,7 @@ header {
 }
 
 header h1 {
-	font-size: 35px;
+	font-size: 2.2em; 
 }
 
 section h3 {
@@ -61,7 +58,7 @@ section h3 {
 }
 
 section h2 {
-	font-size: 25px;
+	font-size: 1.55em;
 	color: #00b33c;
 	margin-top: 16px;
 }
