--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -2,9 +2,9 @@
 <div id="message-not-sent" class="notification failure hidden">I'm sorry, there was a problem sending your email. Please try later.</div>
 <form id="contact-form" method="POST" action="https://www.enformed.io/20urryaq" class="contact">
     <ul>
-        <li><input type="text" name="name" placeholder="Name" required /></li>
-        <li><input type="email" name="email" placeholder="Email" required /></li>
-        <li><textarea name="message" rows="4" placeholder="Message" required></textarea></li>
+        <li><label for="your-name">Your name</label> <input id="your-name" type="text" name="name" placeholder="What's your name?" required /></li>
+        <li><label for="your-email">Your email</label> <input id="your-email" type="email" name="email" placeholder="Where should I write back?" required /></li>
+        <li><label for="your-message">Your message</label> <textarea id="your-message" name="message" rows="4" placeholder="Please type your message here." required></textarea></li>
         <li><input type="submit" value="Send email" /></li>
     </ul>
     <input type="hidden" name="*subject" value="jmln.me|contact" />
