Add fade in animation on page load

--- a/css/vita.css
+++ b/css/vita.css
@@ -199,6 +199,15 @@ form.contact input[type=submit]:disabled {
 	display: none;
 }
 
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+body main {
+	animation: fadein 2s;		
+}
+
 @media print {
 	.page-break	{
 		display: block;
