--- a/css/vita.css
+++ b/css/vita.css
@@ -199,6 +199,17 @@ form.contact input[type=submit]:disabled {
 	display: none;
 }
 
+/* Hide honey pot fields to avoid spam */
+.offscreen {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 0;
+	width: 0;
+	z-index: -1;
+}
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
